--- a/app/templates/kit_livro.html
+++ b/app/templates/kit_livro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Editora</title>
+    <title>Kit Livros</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
 </head>
 
@@ -95,19 +95,21 @@
       </nav>
 
     <div class="container mt-5">
-        <h2 class="mb-4">Tabela de Editoras</h2>
+        <h2 class="mb-4">Tabela de Kit Livros</h2>
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Nome da Editora</th>
-                    <th scope="col">Cidade</th>
+                    <th scope="col">Nome do Kit</th>
+                    <th scope="col">Turma</th>
+                    <th scope="col">Data de Criação</th>
                 </tr>
             </thead>
             <tbody>
-                {% for editora in editoras %}
+                {% for kitlivro in kitlivros %}
                 <tr>
-                    <td>{{ editora.nome }}</td>
-                    <td>{{ editora.cidade.nome }}</td>
+                    <td>{{ kitlivro.nome }}</td>
+                    <td>{{ kitlivro.turma.nome }}</td>
+                    <td>{{ kitlivro.data_criacao }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
