--- a/app/templates/kit_livro_item.html
+++ b/app/templates/kit_livro_item.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Editora</title>
+    <title>Itens do Kit Livros</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
 </head>
 
@@ -93,21 +93,20 @@
           </ul>
         </div>
       </nav>
-
     <div class="container mt-5">
-        <h2 class="mb-4">Tabela de Editoras</h2>
+        <h2 class="mb-4">Tabela de Itens do Kit Livros</h2>
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Nome da Editora</th>
-                    <th scope="col">Cidade</th>
+                    <th scope="col">Kit Livro</th>
+                    <th scope="col">Livro</th>
                 </tr>
             </thead>
             <tbody>
-                {% for editora in editoras %}
+                {% for item in kitlivroitems %}
                 <tr>
-                    <td>{{ editora.nome }}</td>
-                    <td>{{ editora.cidade.nome }}</td>
+                    <td>{{ item.kitlivro.nome }}</td>
+                    <td>{{ item.livro.titulo }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
