--- a/app/templates/cidade.html
+++ b/app/templates/cidade.html
@@ -30,8 +30,15 @@
         <li class="nav-item"><a class="nav-link text-light" href="/autores/">Autores</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="/editoras/">Editoras</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="/livros/">Livros</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/kits/">Kit de Livros</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/kit-itens/">Itens do Kit Livros</a></li>
+        <li class="nav-item">
+      
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/kitlivros/">Kit de Livros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/kitlivroitens/">Itens do Kit Livros</a>
+          </li>
+    
         <li class="nav-item"><a class="nav-link text-light" href="/emprestimos/">Empréstimos</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="/devolucoes/">Devoluções</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="/atrasos/">Atrasos</a></li>
