--- a/app/templates/pessoa.html
+++ b/app/templates/pessoa.html
@@ -11,11 +11,11 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <a class="navbar-brand" href="/">Sistema de Livros</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link text-light" href="/">Início</a></li>
@@ -29,8 +29,14 @@
         <li class="nav-item"><a class="nav-link text-light" href="/autores/">Autores</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="/editoras/">Editoras</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="/livros/">Livros</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/kits/">Kit de Livros</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/kit-itens/">Itens do Kit Livros</a></li>
+        
+        <li class="nav-item">
+          <a class="nav-link text-light" href="/kitlivros/">Kit de Livros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="/kitlivroitens/">Itens do Kit Livros</a>
+        </li>
+  
         <li class="nav-item"><a class="nav-link text-light" href="/emprestimos/">Empréstimos</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="/devolucoes/">Devoluções</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="/atrasos/">Atrasos</a></li>
@@ -42,7 +48,7 @@
 
   <div class="container mt-5">
     <h2 class="mb-4">Lista de Pessoas</h2>
-    
+
     {% if pessoas %}
     <div class="row">
       {% for pessoa in pessoas %}
@@ -52,7 +58,8 @@
             <h5 class="card-title font-weight-bold">{{ pessoa.nome }}</h5>
             <p class="card-text mb-1"><strong>Cidade:</strong> {{ pessoa.cidade }}</p>
             <p class="card-text mb-1"><strong>Ocupação:</strong> {{ pessoa.ocupacao }}</p>
-            <p class="card-text mb-1"><strong>E-mail:</strong> <a href="mailto:{{ pessoa.email }}">{{ pessoa.email }}</a></p>
+            <p class="card-text mb-1"><strong>CPF:</strong> {{ pessoa.cpf }}</p>
+            
             <p class="card-text"><strong>Data de Nascimento:</strong> {{ pessoa.data_nasc }}</p>
           </div>
         </div>
@@ -60,9 +67,9 @@
       {% endfor %}
     </div>
     {% else %}
-      <div class="alert alert-warning" role="alert">
-        Nenhuma pessoa cadastrada.
-      </div>
+    <div class="alert alert-warning" role="alert">
+      Nenhuma pessoa cadastrada.
+    </div>
     {% endif %}
   </div>
 
