--- a/app/templates/autor.html
+++ b/app/templates/autor.html
@@ -62,14 +62,13 @@
             <li class="nav-item">
               <a class="nav-link text-light" href="/livros/">Livros</a>
             </li>
-          
-            <li class="nav-item">
-              <a class="nav-link text-light" href="/kitlivros/">Kit de Livros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="/kitlivroitens/">Itens do Kit Livros</a>
-            </li>
       
+            <li class="nav-item">
+              <a class="nav-link text-light" href="/kits/">Kit de Livros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="/kit-itens/">Itens do Kit Livros</a>
+            </li>
       
             <li class="nav-item">
               <a class="nav-link text-light" href="/emprestimos/">Empréstimos</a>
