--- a/app/templates/editora.html
+++ b/app/templates/editora.html
@@ -63,14 +63,12 @@
               <a class="nav-link text-light" href="/livros/">Livros</a>
             </li>
       
-            
             <li class="nav-item">
-              <a class="nav-link text-light" href="/kitlivros/">Kit de Livros</a>
+              <a class="nav-link text-light" href="/kits/">Kit de Livros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="/kitlivroitens/">Itens do Kit Livros</a>
+              <a class="nav-link text-light" href="/kit-itens/">Itens do Kit Livros</a>
             </li>
-      
       
             <li class="nav-item">
               <a class="nav-link text-light" href="/emprestimos/">Empréstimos</a>
